--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
+
+
 * {
   padding: 0;
   margin: 0;
@@ -38,6 +40,35 @@ h2 {
   font-style: italic;
   font-weight: 100;
 }
+
+header .logo {
+  display: flex;
+  flex-direction: row;
+  height: 10vh;
+  
+}
+header .logo .logo-image{
+  width: 3em;
+  /* height: auto; */
+}
+
+header .logo .logo-image img{
+  width: fit-content;
+  display: block;  
+  width: 3em;
+  height: auto;
+  margin-block-start: 22px;
+}
+header .logo .logo-name h2{
+  width: fit-content;
+  display: block;
+  margin-block-start: 23px;
+  /* height: 10vh; */
+
+}
+
+
+
 
 header .navbar {
   display: flex;
@@ -82,8 +113,10 @@ header nav i:hover {
   color: #0e6c66;
 }
 
-header nav ul li:hover {
-  background: #0e6c66;
+header nav ul li a:hover {
+  /* background: #0e6c66; */
+  color: #0e6c66;
+
   padding: 5px 10px;
   border-radius: 5px;
 }
