--- a/css/gallary.css
+++ b/css/gallary.css
@@ -24,31 +24,12 @@ video {
   padding: 40px;
 }
 
-.card-list2 {
-    /* margin-top: 20px; */
-    display: flex;
-    flex-wrap: wrap;
-    row-gap: 25px;
-    column-gap: 30px;
-    justify-content: center;
-    text-align: center;
-    background-color: white;
-    margin-bottom: -102px;
+.card-list {
+  background-color: white;
 }
 
-.card-list2 .card2 {
-   border: 1px solid black;
-}
-.card-list2 .card2 img {
-   height: 250px;
-}
 
-.card-list2 .card2 .card-body2 {
-   height: 250px;
-   background-color: white;
-   color: black;
-   height: 170px;
-}
+
 
 
 
